Add namespace to routes
JIRA:LMCROSSITXSADEPLOY-2124